--- a/lettershape.html
+++ b/lettershape.html
@@ -10,8 +10,8 @@
         <b>Doctor Who</b><br/>
         <i>Doctor Who</i><br/>
         <small>Doctor Who</small><br/>
-        <sub>Doctor Who</sub><br/>
-        <sup>Doctor Who</sup><br/>
+        Doctor <sub>Who</sub><br/>
+        Doctor <sup>Who</sup><br/>
         <ins>Doctor Who</ins><br/>
         <del>Doctor Who</del><br/>
     </p>
